Applications/Semaphore/semaphore/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore-deployment
  namespace: semaphore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: semaphore-deployment
  template:
    metadata:
      labels:
        app: semaphore-deployment
        version: "v2.9.37"
    spec:
      containers:
        - name: semaphore
          image: semaphoreui/semaphore:v2.9.37
          ports:
            - name: http-port
              containerPort: 3000
          volumeMounts:
            - name: playbooks
              mountPath: /ansible/playbooks
            - name: shared
              mountPath: /ansible/shared
      volumes:
        - name: playbooks
          persistentVolumeClaim:
            claimName: semaphore-playbooks-persistentvolumeclaim
        - name: shared
          persistentVolumeClaim:
            claimName: semaphore-shared-persistentvolumeclaim
