Applications/Semaphore/semaphore/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: semaphore-service
  namespace: semaphore
spec:
  ports:
    - name: http-port
      port: 3000
      targetPort: http-port
      protocol: TCP
  selector:
    app: semaphore-deployment
