Applications/Semaphore/semaphore/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: semaphore-virtualservice
  namespace: semaphore
spec:
  hosts:
    - semaphore.$DOMAIN
  gateways:
    - istio-custom/default-gateway
  http:
    - route:
        - destination:
            host: semaphore-service
            port: 
              number: 3000
          weight: 100
